Bug 131344 - Font Size combobox remains enabled in read-only mode
Summary: Font Size combobox remains enabled in read-only mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Read-Only
  Show dependency treegraph
 
Reported: 2020-03-15 01:58 UTC by Jim Raykowski
Modified: 2020-03-29 06:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2020-03-15 01:58:36 UTC
Steps to repro using standard toolbar user interface:

1) Open a Writer document

2) Menu > Edit > Edit Mode

3) Menu > View > Toolbars > Formatting

Results: Font Size combobox in Formatting toolbar is enabled

Expected results: Font Size combobox in Formatting toolbar is disabled
Comment 1 Jim Raykowski 2020-03-15 02:16:00 UTC
I had been working on this and had made the same fixes made recently by Caolán in commit 633b2f4dffedaf4a162a5fa92eeaeb509efab173

Here is the part of that effort that makes the SvxFontSizeBox_Impl Enable and Disable functions work:
https://gerrit.libreoffice.org/c/core/+/90510
Comment 2 Dieter 2020-03-18 16:28:56 UTC
I can't confirm with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 5dcbd1bb557450a2d658a710c163b310c0cee157
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL
Comment 3 Jim Raykowski 2020-03-19 03:40:31 UTC
Seems to be a gtk3 only thing.

Version: 7.0.0.0.alpha0+
Build ID: 6388c578c672690fff662cb04b6a0436cd742f37
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Xisco Faulí 2020-03-19 12:14:07 UTC
Moving to ASSIGNED
Comment 5 Commit Notification 2020-03-23 14:37:03 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a5b1b65a1611fd1ad8e166cbddf6d2d9702b98d0

tdf#131344 Make SvxFontSizeBox_Impl Enable and Disable work

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.