tdf#131344 Make SvxFontSizeBox_Impl Enable and Disable work

...with change to InterimItemWindow way of using FontSizeBox as member
variable widget

Change-Id: I0ad0c3191800ce80a88e58467950a80b5791a2da